--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
  font-family: "Sawarabi Gothic";
  font-size: 14px;
  line-height: 1.7;
- background-color: #f0f8ff;
+ background-color: #efeff0;;
 }
 
 .top_page {
@@ -19,7 +19,7 @@
 
 .top_page a {
  vertical-align: middle;
- padding: 5px 10px;
+ padding: 5px 8.5px;
 }
 
 .humberger_wrap {
@@ -36,41 +36,286 @@
 }
 
 .humberger {
- display: block;
  position: relative;
- width: 21px;
- height: 2px;
- background: #1a1919;
- border-radius: 1px;
 }
 
-.humberger:before {
- content: "";
+.hum_1 {
  position: absolute;
  display: block;
  width: 21px;
  height: 2px;
  background: #1a1919;
  border-radius: 1px;
- bottom: 8px;
+ bottom: 7px;
+ transition: all .4s;
 }
 
-.humberger:after {
- content: "";
+.hum_2 {
  position: absolute;
  display: block;
  width: 21px;
  height: 2px;
  background: #1a1919;
  border-radius: 1px;
- top: 8px;
+ transition: all .4s;
+}
+
+.hum_3 {
+ position: absolute;
+ display: block;
+ width: 21px;
+ height: 2px;
+ background: #1a1919;
+ border-radius: 1px;
+ top: 9px;
+ transition: all .4s;
+}
+
+.effect_1 {
+ opacity: 0;
+}
+
+.effect_2 {
+ -webkit-transform: translateY(9px) rotate(-45deg);
+ transform: translateY(9px) rotate(-45deg);
+}
+
+.effect_3 {
+ -webkit-transform: translateY(-9px) rotate(45deg);
+  transform: translateY(-9px) rotate(45deg);
+}
+
+.sns{
+ opacity: 0;
+ width: 120px;
+ position: absolute;
+ top: 40px;
+ right: 50px;
+ font-size: 1.2rem;
+ transform: translateY(20px);
+ transition: all .4s;
+}
+
+.clickin {
+ opacity: 1;
+ display: block;
+ transition: all .4s;
+ -webkit-transform: translateY(0);
+  transform: translateY(0);
+}
+
+.hover:hover {
+ text-decoration: underline;
+}
+
+#mian {
+ width: 100%;
+}
+
+.main_top {
+ position: relative;
+}
+
+.top_bg {
+ opacity: 0;
+ background-image: url("../pic/top_img.JPG");
+ background-repeat: no-repeat;
+ background-size: cover; 
+ background-position: center bottom;
+}
+
+.top_ttl {
+ opacity: 0;
+ padding: 300px 80px;
+ padding-right: 160px;
+ color: #432f2f;
+ text-align: right;
+ font-size: 1.33rem;
+ letter-spacing: .8rem;
 }
 
 
+.about {
+ margin: 30px auto;
+ text-align: center;
+ font-size: 3rem;
+ font-family: 'Brush Script MT',sans-serif;
+ max-width: 900px;
+}
+
+.inview {
+ opacity: 0; /*opacityを0にする*/
+ transform: translateY(30px);
+ transition: 700ms;
+}
+
+.scrollin {
+ opacity: 1;
+ transform: translateY(0);
+}
+
+.about_dtl {
+ width: 100%;
+ padding: 30px 0;
+ font-family: 'klee',sans-serif;
+ display: table;
+ text-align: left;
+ font-size: 1rem;
+ font-weight: bold;
+ line-height: 1.7;
+}
+
+.about_dtl p {
+ margin-left: 30px;
+ font-weight: normal;
+}
+
+.camera {
+ text-align: left;
+ font-size: 1.11rem;
+}
+
+.photo {
+ display: table-cell;
+ text-align: right;
+ vertical-align: middle;
+}
+
+.cameraman_img {
+ display: table-cell;
+ width: 200px;
+}
+
+.works{
+ margin-top: 40px;
+ padding-bottom: 40px;
+ text-align: center;
+ font-size: 3rem;
+}
+
+.works_ttl {
+ font-size: 3rem;
+ font-family: 'Brush Script MT',sans-serif;
+}
+
+.flex {
+ display: flex;
+ justify-content: center;
+}
+
+.page {
+ margin: 4%;
+ width: 100%;
+ height: auto;
+ position: relative;
+}
+
+.page_img {
+ width: 100%;
+}
+
+.mask {
+ position: absolute;
+ top: 0;
+ left: 0;
+ width: 100%;
+ opacity: 0;
+ background-color: rgba(0,0,0,0.5);
+ transition: all 0.2s;
+}
+
+.mask:before {
+ content: "";
+ display: block;
+ padding-top: 100%;
+}
+
+.mask:hover {
+ opacity: 1;
+}
+
+.caption {
+ position: absolute;
+ z-index: 2;
+ width: 100%;
+ top: 43%;
+ text-align: center;
+ background-color: rgba(1,1,1,0.5);
+ color: #fff;
+ font-size: 1.5rem;
+ font-family: 'klee',sans-serif;
+}
+
+#wrapper footer {
+ background-color: #fff;
+ background-image: url(../pic/sea.JPG);
+}
+
+#footer {
+ padding: 30px 0;
+ margin: auto;
+ max-width: 950px;
+}
+
+.footer_sns {
+ display: inline-block;
+ margin-right: 30px;
+ font-size: 1rem;
+}
+
+@media(max-width: 590px){
+
+.header {
+ width: 100%;
+ height: 80px;
+ position: fixed;
+ z-index: 999;
+ background-color: #efeff0;
+}
+
+.top_page {
+ top: 25px;
+ left: 30px;
+}
+
+.top_bg {
+ background-size: 100%;
+ background-position: center;
+}
+
+.top_ttl {
+ padding: 175px 50px 175px 310px;
+ font-size: .9rem;
+ letter-spacing: .6rem;
+}
+
+.about {
+ max-width: 90%;
+}
+
+.cameraman_img {
+ width: 150px;
+}
+
+.flex {
+ display: block;
+ margin: auto;
+ max-width: 80%;
+}
+
+.page {
+ width: 100%;
+ height: 100%;
+ margin: 0;
+ margin-bottom: 30px;
+}
+
+#footer {
+ padding: 30px;
+}
 
 
-
-
+}
 
 
 
