--- a/css/photo.css
+++ b/css/photo.css
@@ -157,6 +157,62 @@
 
 
 
+@media(max-width: 375px) {
+
+.header {
+ height: 80px;
+ padding: 0 1%;
+}
+
+.header_page {
+ font-size: .5rem;
+ width: 30.5%;
+ padding-top: 15px;
+}
+
+.header_page li {
+ padding-right: 5px;
+}
+
+.name {
+ width: 37%;
+ font-size: .8rem;
+ letter-spacing: .3rem;
+ padding: 0;
+}
+
+.top_page {
+ right: 30px;
+ top: 27px;
+}
+
+.side {
+ width: 100%;
+ height: 100%;
+ max-width: 90%;
+}
+
+.vertical {
+ width: 100%;
+ height: 100%;
+ max-width: 70%;
+}
+
+.footer {
+ width: 50px;
+ height: 50px;
+ right: 15px;
+ bottom: 20px;
+}
+
+.top_arrow {
+ font-size: 25px;
+}
+
+
+
+
+}
 
 
 
